# servant-record

./: LICENSE  README.md  formolou.yaml  servant-record.cabal
servant-record-client/: servant-record-client.cabal
servant-record-client/src/Servant/Record/: Client.hs
servant-record-core/: CHANGELOG.md  servant-record-core.cabal
servant-record-core/src/Servant/: Record.hs  Reflection.hs
servant-record-server/: servant-record-server.cabal
servant-record-server/src/Servant/Record/: Server.hs
servant-record-server/tests/: Main.hs
src/Servant/: Record.hs  Reflection.hs
tests/: Main.hs
