cabal-version:      2.4
name:               servant-record
version:            0.1.0.0
license:            MIT
author:             uhbif19
maintainer:         uhbif19@gmail.com
build-type: Simple
extra-source-files:
    README.md
    CHANGELOG.md
synopsis: Servant combinator to parse query params as Haskell record
description: Servant combinator to parse query params as Haskell record
category: Servant, Web

common common
    build-depends:
        base,
        containers,
        http-api-data,
        http-types,
        servant,
        servant-server,
        servant-client-core,
        text,
        wai,
    default-extensions:
        DataKinds
        TypeOperators
        TypeFamilies
        FlexibleContexts
        FlexibleInstances
        InstanceSigs
        PolyKinds
        TypeApplications
        ScopedTypeVariables
        MultiParamTypeClasses
        NamedFieldPuns
        DeriveGeneric
        OverloadedStrings
library
    import: common
    exposed-modules:
        Servant.Record
        Servant.Reflection
    ghc-options:
        -fprint-potential-instances
        -Wall
    hs-source-dirs:
        src
    default-language: Haskell2010

test-suite main
  import: common
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    hspec,
    http-client,
    servant-record,
    servant-client,
    warp
  hs-source-dirs: tests
