cabal-version:      2.4
name:               servant-record
version:            0.1.0.0
license:            MIT
author:             uhbif19
maintainer:         uhbif19@gmail.com
build-type: Simple
extra-source-files:
    README.md
    CHANGELOG.md
synopsis: Servant combinator to parse query params as Haskell record
description: Servant combinator to parse query params as Haskell record
category: Servant, Web

common common
    build-depends:
        base                          >= 4.15.1 && < 4.16,
        containers                    >= 0.6.4 && < 0.7,
        http-api-data                 >= 0.4.3 && < 0.5,
        text                          >= 1.2.5 && < 1.3,
        http-types                    >= 0.12.3 && < 0.13,
        servant                       >= 0.19 && < 0.20,
        servant-client-core           >= 0.19 && < 0.20,
        servant-server                >= 0.19.1 && < 0.20,
        wai                           >= 3.2.3 && < 3.3,
    default-extensions:
        DataKinds
        TypeOperators
        TypeFamilies
        FlexibleContexts
        FlexibleInstances
        InstanceSigs
        PolyKinds
        TypeApplications
        ScopedTypeVariables
        MultiParamTypeClasses
        NamedFieldPuns
        DeriveGeneric
        OverloadedStrings
    default-language: Haskell2010

library
    import: common
    exposed-modules:
        Servant.Record
        Servant.Reflection
    ghc-options:
        -fprint-potential-instances
        -Wall
    hs-source-dirs:
        src

test-suite main
  import: common
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    hspec                         >= 2.10.5 && < 2.11,
    http-client                   >= 0.7.13 && < 0.8,
    servant-client                >= 0.19 && < 0.20,
    warp                          >= 3.3.22 && < 3.4,
  hs-source-dirs: tests
